sandbox/output
StringCalculator.java:19: error: incompatible types: char cannot be converted to String
        String[] numbers = input.split(',');
                                       ^
StringCalculatorTest.java:15: error: cannot find symbol
        return Arrays.asList(new Object[][] {
               ^
  symbol:   variable Arrays
  location: class StringCalculatorTest
StringCalculatorTest.java:31: error: cannot find symbol
        int result = sc.Add(input);
                       ^
  symbol:   method Add(String)
  location: variable sc of type StringCalculator
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
3 errors
